# advent

./: .clang-format  .gitignore  README.md  meson.build
2021/: d1.c  d10.c  d11.c  d2.c  d3.c  d4.c  d5.c  d6.c  d7.c  d8.c  d9.c
2022/: d1.c  d10.c  d11.c  d12.c  d13.c  d14.c  d15.c  d16.c  d17.c  d18.c  d19.c  d2.c  d20.c  d21.c  d22.c  d23.c  d24.c  d25.c  d3.c  d4.c  d5.c  d6.c  d7.c  d8.c  d9.c
2023/: d1.c  d2.c  d3.c  d4.c  d5.c  d6.c
2025/: d1.c  d2.c  d3.c  d4.c  d5.c
2025/input/: d2.txt
include/: util.h
